--- a/frontend/src/assets/styles/elements/_news-alert.scss
+++ b/frontend/src/assets/styles/elements/_news-alert.scss
@@ -1,7 +1,7 @@
 .alert-wrapper {
   display: none;
   height: 90px;
-  width: 100vw;
+  width: 100%;
   padding: 22px $side-margin;
   background: #f8f8f8;
   box-shadow: 0 1px 4px -2px #999;
